[package]
name = "text-chunker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
